fixing contrast styles.css

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -118,7 +118,7 @@ span.link-icon {
 } 
 
 span.openness { display:inline-block;
-padding:1px 5px; color:#494646 }
+padding:1px 5px; color:#fefefe }
 span.open { background-color:#3e9b74; }
 span.partial { background-color:#dd9f1c; }
 span.closed { background-color:#ca6014; }
